Fix display code button on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,14 +21,19 @@
 @import 'loaders/6_twocircle';
 @import 'loaders/7_bar';
 
+html {
+  height: 100%;
+  width: 100%;
+}
+
 body {
   display: flex;
   flex-direction: row;
   font-family: 'Poppins', sans-serif;
   margin: 0;
-  height: 100vh;
-  width: 100vw;
-  //overflow: hidden;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
 }
 
 button, a {
