--- a/src/scss/partials/_media-queries.scss
+++ b/src/scss/partials/_media-queries.scss
@@ -10,7 +10,6 @@
       }
       #loader-container {
         max-width: 100%;
-        height: 96vh;
         &.code-visible {
           display: none;
         }
@@ -35,7 +34,6 @@
       }
       #displayCodeButton {
         display: flex;
-        height: 4vh;
       }
       h1, h2 {
          margin: 0;
